# sato

./: .gitignore  Makefile  README.md  _opam  debug.txt  odefa.opam  sato  temp.ml  test.odefa  test_create.py  type_checker
src/answer-generation/: dune  generator.ml  generator.mli  generator_answer.ml  generator_answer.mli  generator_utils.ml
src/ast/: ast.ml  ast_pp.ml  ast_pp_brief.ml  ast_tools.ml  ast_wellformedness.ml  error.ml
src/ddpa-analysis/: ddpa_analysis.ml
src/interpreter/: interpreter.ml  interpreter.mli
src/odefa-natural/: dune  odefa_instrumentation.ml  on_ast.ml  on_ast_pp.ml  on_error.ml  on_error.mli  on_error_2.ml  on_to_odefa.ml  on_to_odefa_maps.ml  on_to_odefa_maps.mli  on_to_odefa_monad.ml  on_to_odefa_preliminary.ml  on_to_odefa_types.ml  on_to_odefa_utils.ml  preliminary_conversion.ml  ton_to_on.ml  ton_to_on_maps.ml  ton_to_on_monad.ml  translator_utils.ml  type_instrumentation.ml
src/parser/: generated_lexer.mll  generated_parser.mly  parser.ml
src/sato-main/: dune  sato.ml  sato_args.ml  sato_args.mli  sato_cli_parser.ml  sato_cli_parser.mli  sato_parser.ml  sato_parser.mli  sato_types.ml  sato_version.ml
src/statistics/: source_statistics.ml
src/symbolic-interpreter/: dune  interpreter.ml  interpreter.mli  interpreter_environment.ml  interpreter_environment.mli  interpreter_types.ml
src/test-generation-main/: test_generator.ml
src/toploop/: toploop_analysis.ml  toploop_utils.ml
src/translator-main/: translator.ml
src/type-checker-main/: type_checker.ml  (+3 more)
test/: dune  test.ml  test_ddpa.ml  test_sato.ml
(+325 files in other folders)
