opam-version: "2.0"
name: "sato"
version: "0.9.0+dev"
synopsis: "Symbolic Analysis Typechecker for Odefa"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
license: "Apache"
homepage: "https://github.com/JHU-PL-Lab/sato"
dev-repo: "git+https://github.com/JHU-PL-Lab/sato.git"
bug-reports: "https://github.com/JHU-PL-Lab/sato/issues"
build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.04.0"}
  "base-threads"
  "batteries"
  "dune" {build & >= "1.0"}
  "jhupllib" {>= "0.1.1"}
  "ocaml-monadic" {>= "0.4.1"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "3.2"}
  "ppx_deriving_yojson" {>= "2.1"}
  "yojson"
]
